--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>Спецкурс</title>
 </head>
 <body>
-  <h1>Математические основы информационной безопасности</h1>
-  <a href="src/Lecture 01/Slides-01.pdf">Лекция 1</a> <br>
-  <a href="src/Lecture 02/Slides-02.pdf">Лекция 2</a>
+  <div align="center"><h1>Математические основы информационной безопасности</h1></div>
+  <div align="center"><h2>Следующее занятие 25 ноября 15.45 в кабинете 22</h2></div>
+  <div align="center"><h2>Тема: современные алгоритмы шифрования</h2></div>
+  <h3><a href="lectures.html">Лекции</a></h3>
+  <h3>gruzdev.sesc@mail.ru</h3>
 </body>
 </html>
