--- a/lectures.html
+++ b/lectures.html
@@ -10,5 +10,6 @@
   <h3>Материалы лекций: https://github.com/sesc-infosec/sesc-infosec.github.io.git</h3>
   <h3><a href="src/Lecture 01/Slides-01.pdf">Лекция 1 - Шифр гаммирования</a></h3>
   <h3><a href="src/Lecture 02/Slides-02.pdf">Лекция 2 - Шифры замены</a></h3>
+  <h3><a href="src/Lecture 03/Slides-03.pdf">Лекция 3 - Современные алгоритмы шифрования</a></h3>
 </body>
 </html>
