--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div align="center"><h1>Математические основы информационной безопасности</h1></div>
-  <div align="center"><h2>Следующее занятие 25 ноября 15.45 в кабинете 22</h2></div>
-  <div align="center"><h2>Тема: современные алгоритмы шифрования</h2></div>
+  <div align="center"><h2>Следующее занятие 2 декабря 15.45 в кабинете 22</h2></div>
+  <div align="center"><h2>Тема: Хеш-функции. Криптографические атаки.</h2></div>
   <h3><a href="lectures.html">Лекции</a></h3>
   <h3>gruzdev.sesc@mail.ru</h3>
 </body>
