--- a/lectures.html
+++ b/lectures.html
@@ -12,5 +12,6 @@
   <h3><a href="src/Lecture 02/Slides-02.pdf">Лекция 2 - Шифры замены</a></h3>
   <h3><a href="src/Lecture 03/Slides-03.pdf">Лекция 3 - Современные алгоритмы шифрования</a></h3>
   <h3><a href="src/Lecture 04/Slides-04.pdf">Лекция 4 - Хеш-функции. Криптографические атаки</a></h3>
+  <h3><a href="src/Lecture 05/Slides-05.pdf">Лекция 5 - Криптографические протоколы</a></h3>
 </body>
 </html>
