--- a/lectures.html
+++ b/lectures.html
@@ -13,5 +13,6 @@
   <h3><a href="src/Lecture 03/Slides-03.pdf">Лекция 3 - Современные алгоритмы шифрования</a></h3>
   <h3><a href="src/Lecture 04/Slides-04.pdf">Лекция 4 - Хеш-функции. Криптографические атаки</a></h3>
   <h3><a href="src/Lecture 05/Slides-05.pdf">Лекция 5 - Криптографические протоколы</a></h3>
+  <h3><a href="src/Lecture 06/Slides-06.pdf">Лекция 6 - Криптовалюты</a></h3>
 </body>
 </html>
