--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div align="center"><h1>Математические основы информационной безопасности</h1></div>
-  <div align="center"><h2>Следующее занятие 23 декабря 15.45 в кабинете 22</h2></div>
-  <div align="center"><h2>Тема: Форматы исполняемых файлов</h2></div>
+  <div align="center"><h2>Следующее занятие 13 января 15.45 в кабинете 22</h2></div>
+  <div align="center"><h2>Тема: Анализ прогамм</h2></div>
   <h3><a href="lectures.html">Лекции</a></h3>
   <h3>gruzdev.sesc@mail.ru</h3>
 </body>
