--- a/lectures.html
+++ b/lectures.html
@@ -15,5 +15,6 @@
   <h3><a href="src/Lecture 05/Slides-05.pdf">Лекция 5 - Криптографические протоколы</a></h3>
   <h3><a href="src/Lecture 06/Slides-06.pdf">Лекция 6 - Криптовалюты</a></h3>
   <h3><a href="src/Lecture 07/Slides-07.pdf">Лекция 7 - Дизассемблирование программ</a></h3>
+  <h3><a href="src/Lecture 08/Slides-08.pdf">Лекция 8 - Анализ программ</a></h3>
 </body>
 </html>
