--- a/lectures.html
+++ b/lectures.html
@@ -16,5 +16,6 @@
   <h3><a href="src/Lecture 06/Slides-06.pdf">Лекция 6 - Криптовалюты</a></h3>
   <h3><a href="src/Lecture 07/Slides-07.pdf">Лекция 7 - Дизассемблирование программ</a></h3>
   <h3><a href="src/Lecture 08/Slides-08.pdf">Лекция 8 - Анализ программ</a></h3>
+  <h3><a href="src/Lecture 09/Slides-09.pdf">Лекция 9 - Вредоносные программы</a></h3>
 </body>
 </html>
