--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Спецкурс</title>
 </head>
-<body>
+<body>word
+
   <div align="center"><h1>Математические основы информационной безопасности</h1></div>
-  <div align="center"><h2>Следующее занятие 20 января 15.45 в кабинете 22</h2></div>
-  <div align="center"><h2>Тема: Вредоносные программы</h2></div>
+  <div align="center"><h2>Следующее занятие 27 января 15.45 в кабинете 22</h2></div>
+  <div align="center"><h2>Тема: VPN</h2></div>
   <h3><a href="lectures.html">Лекции</a></h3>
   <h3>gruzdev.sesc@mail.ru</h3>
 </body>
