--- a/lectures.html
+++ b/lectures.html
@@ -18,5 +18,6 @@
   <h3><a href="src/Lecture 08/Slides-08.pdf">Лекция 8 - Анализ программ</a></h3>
   <h3><a href="src/Lecture 09/Slides-09.pdf">Лекция 9 - Вредоносные программы</a></h3>
   <h3><a href="src/Lecture 10/Slides-10.pdf">Лекция 10 - Защита данных в сети</a></h3>
+  <h3><a href="src/Lecture 11/Slides-11.pdf">Лекция 11 - Атаки по сторонним каналам. Стеганография</a></h3>
 </body>
 </html>
