--- a/lectures.html
+++ b/lectures.html
@@ -19,5 +19,6 @@
   <h3><a href="src/Lecture 09/Slides-09.pdf">Лекция 9 - Вредоносные программы</a></h3>
   <h3><a href="src/Lecture 10/Slides-10.pdf">Лекция 10 - Защита данных в сети</a></h3>
   <h3><a href="src/Lecture 11/Slides-11.pdf">Лекция 11 - Атаки по сторонним каналам. Стеганография</a></h3>
+  <h3><a href="src/Lecture 12/Slides-12.pdf">Лекция 12 - Машинное обучение. Линейная регрессия</a></h3>
 </body>
 </html>
