--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div align="center"><h1>Математические основы информационной безопасности</h1></div>
-  <div align="center"><h2>Следующее занятие 25 февраля 13.30 в кабинете 22</h2></div>
+  <div align="center"><h2>Следующее занятие 2 марта 15.45 в кабинете 22</h2></div>
   <div align="center"><h2>Тема: Методы классификации.</h2></div>
   <h3><a href="lectures.html">Лекции</a></h3>
   <h3>gruzdev.sesc@mail.ru</h3>
