--- a/lectures.html
+++ b/lectures.html
@@ -20,5 +20,6 @@
   <h3><a href="src/Lecture 10/Slides-10.pdf">Лекция 10 - Защита данных в сети</a></h3>
   <h3><a href="src/Lecture 11/Slides-11.pdf">Лекция 11 - Атаки по сторонним каналам. Стеганография</a></h3>
   <h3><a href="src/Lecture 12/Slides-12.pdf">Лекция 12 - Машинное обучение. Линейная регрессия</a></h3>
+  <h3><a href="src/Lecture 13/Slides-13.pdf">Лекция 13 - Методы классификации</a></h3>
 </body>
 </html>
