--- a/lectures.html
+++ b/lectures.html
@@ -21,5 +21,6 @@
   <h3><a href="src/Lecture 11/Slides-11.pdf">Лекция 11 - Атаки по сторонним каналам. Стеганография</a></h3>
   <h3><a href="src/Lecture 12/Slides-12.pdf">Лекция 12 - Машинное обучение. Линейная регрессия</a></h3>
   <h3><a href="src/Lecture 13/Slides-13.pdf">Лекция 13 - Методы классификации</a></h3>
+  <h3><a href="src/Lecture 14/Slides-14.pdf">Лекция 14 - Обучение без учителя</a></h3>
 </body>
 </html>
