--- a/lectures.html
+++ b/lectures.html
@@ -23,5 +23,6 @@
   <h3><a href="src/Lecture 13/Slides-13.pdf">Лекция 13 - Методы классификации</a></h3>
   <h3><a href="src/Lecture 14/Slides-14.pdf">Лекция 14 - Обучение без учителя</a></h3>
   <h3><a href="src/Lecture 15/Slides-15.pdf">Лекция 15 - Нейронные сети</a></h3>
+  <h3><a href="src/Lecture 16/Slides-16.pdf">Лекция 16 - Проблемы переобучения моделей</a></h3>
 </body>
 </html>
