--- a/lectures.html
+++ b/lectures.html
@@ -24,5 +24,6 @@
   <h3><a href="src/Lecture 14/Slides-14.pdf">Лекция 14 - Обучение без учителя</a></h3>
   <h3><a href="src/Lecture 15/Slides-15.pdf">Лекция 15 - Нейронные сети</a></h3>
   <h3><a href="src/Lecture 16/Slides-16.pdf">Лекция 16 - Проблемы переобучения моделей</a></h3>
+  <h3><a href="src/Lecture 17/Slides-17.pdf">Лекция 17 - Ускорение обучения моделей</a></h3>
 </body>
 </html>
